엔터 / 텍스트 수정으로 인한 switch 불가 문제 해결을 위해 커밋을 진행하였습니다.