@@ -1,10 +1,12 @@
 package onboarding;
 
-import java.util.List;
+import javax.xml.stream.FactoryConfigurationError;
+import java.util.*;
 
 public class Problem6 {
     public static List<String> solution(List<List<String>> forms) {
-        List<String> answer = List.of("answer");
+        List<String> answer = Collections.emptyList();
+
         return answer;
     }
 }
